--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -1,1 +1,7 @@
-<p>chatbox works!</p>
+<!-- input field for channel component-->
+
+<mat-card>
+<div class="styling"></div>
+<div class="input"></div>
+<div class="operate"></div>
+</mat-card>
