--- a/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
+++ b/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
@@ -1,1 +1,35 @@
-<p>dialog-create-new-channel works!</p>
+<!-- 
+    Dialog für die Erstellung eines neuen Channels
+
+    Status: nicht responsive
+    keine Funktion 
+    
+    André-->
+
+
+<div class="dialog-container">
+    <div class="headline">
+        <h1 mat-dialog-title>Channels erstellen</h1>
+        <mat-icon>close</mat-icon>
+    </div>
+    <div mat-dialog-content>
+        <p>Channels dienen deinem Team zur Kommunikation. Am besten sollten sie themenbezogen sein – #marketing zum
+            Beispiel.</p>
+        <div class="subhead-wrap">
+            <h3>Name</h3><span class="info">Vergiss nicht, deinem Channel einen Namen zu geben.</span>
+        </div>
+        <mat-form-field appearance="fill">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder="z.B. marketing" maxlength="80">
+            <!--# und zeichenzähler hinzufügen-->
+        </mat-form-field>
+        <h3>Beschreibung (optional)</h3>
+        <mat-form-field appearance="fill">
+            <mat-label>Beschreibung</mat-label>
+            <input matInput placeholder="z.B. marketing" maxlength="80">
+        </mat-form-field>
+        <p class="question">Worum geht es in diesem Channel?</p>
+        <div class="button-wrap"><button mat-button color="accent">Erstellen</button></div>
+        <!--disabled eingeben, wenn kein name gegeben ist-->
+    </div>
+</div>
