added some components and html/css 4 2 components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,9 +36,9 @@
     <div class="router-container">
 
 
-<app-dialog-channel-info></app-dialog-channel-info>
 
-     <!--<router-outlet></router-outlet>--> 
+
+<router-outlet></router-outlet>
 
 
 
