--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -96,17 +96,90 @@ mat-toolbar-row {
         display: flex;
         align-items: center;
     }
-
-
 }
 
 
+.login-wrap {
+
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+
+
+    .log-in {
+
+        background-color: black;
+
+        .login-title {
+            font-size: 3em;
+            font-weight: bold;
+        }
+
+        .input {
+            height: 20px;
+            width: 300px;
+            border: 1px solid white;
+            border-radius: 4px;
+            padding: 8px;
+            margin: 8px;
+        }
+
+        .btn-login {
+            width: 100px;
+            height: 40px;
+            margin: 8px;
+            border: 0;
+            border-radius: 4px;
+            background-color: indigo;
+            margin-bottom: 32px;
+            cursor: pointer;
+        }
+
+        .orCont {
+            display: flex;
+            align-items: center;
+
+            hr {
+                width: 140px;
+                border: 0.5px solid white;
+            }
+
+            .or {
+                margin: 8px;
+            }
+
+        }
 
 
 
+        .login-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 316px;
+            border: 1px solid white;
+            border-radius: 4px;
+            margin: 8px;
+
+            .googleIcon {
+                height: 12px;
+                margin-right: 8px;
+            }
+        }
 
 
 
+    }
 
+}
 
-
+.center {
+    display: flex;
+    align-items: center !important;
+    justify-content: center !important;
+    text-align: center !important;
+    flex-direction: column !important;
+}
