--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,6 +71,7 @@
           <div class="formGroup">
             <input class="input" matInput type="password" placeholder="Passwort" name="passwort" #userPassword required>
           </div>
+          
           <!-- Calling SignIn Api from AuthService -->
 
 
@@ -78,6 +79,11 @@
             <input type="button" class="btn-login" value="Log in"
               (click)="authService.SignIn(userName.value, userPassword.value)">
           </div>
+
+          <div class="forgotPassword">
+            <span routerLink="/forgot-password">Forgot Password?</span>
+          </div>
+
           <div class="orCont">
             <hr>
             <span class="or"><span class="orInner">OR</span></span>
@@ -98,20 +104,16 @@
             </button>
           </div>
 
-          <div class="forgotPassword">
-            <span routerLink="/forgot-password">Forgot Password?</span>
-          </div>
-
         </div>
 
-        <div class="redirectToLogin">
+        <div class="redirectToLogin center">
           <span>Don't have an account?</span><span class="redirect" routerLink="/register-user">Sign Up</span>
         </div>
 
       </div>
     </div>
 
-    <div class="displayTable">
+    <div class="displayTable center">
       <div class="displayTableCell">
         <div class="authBlock">
           ng <h3>Sign Up</h3>
