changed to camelCase

--- a/src/app/dialog-channel-info/dialog-channel-info.component.html
+++ b/src/app/dialog-channel-info/dialog-channel-info.component.html
@@ -14,7 +14,7 @@ and info about channel
     André-->
 
 
-<div class="dialog-container">
+<div class="dialogContainer">
     <div class="headline">
         <h1 mat-dialog-title>Channelname</h1>
         <mat-icon>close</mat-icon>
