--- a/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
+++ b/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
@@ -7,7 +7,7 @@
     André-->
 
 
-<div class="dialog-container">
+<div class="dialogContainer">
     <div class="headline">
         <h1 mat-dialog-title>Channels erstellen</h1>
         <mat-icon>close</mat-icon>
@@ -15,7 +15,7 @@
     <div mat-dialog-content>
         <p>Channels dienen deinem Team zur Kommunikation. Am besten sollten sie themenbezogen sein – #marketing zum
             Beispiel.</p>
-        <div class="subhead-wrap">
+        <div class="subheadWrap">
             <h3>Name</h3><span class="info">Vergiss nicht, deinem Channel einen Namen zu geben.</span>
         </div>
         <mat-form-field appearance="fill">
@@ -29,7 +29,7 @@
             <input matInput placeholder="z.B. marketing" maxlength="80">
         </mat-form-field>
         <p class="question">Worum geht es in diesem Channel?</p>
-        <div class="button-wrap"><button mat-button color="accent">Erstellen</button></div>
+        <div class="buttonWrap"><button mat-button color="accent">Erstellen</button></div>
         <!--disabled eingeben, wenn kein name gegeben ist-->
     </div>
 </div>
