--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -15,7 +15,7 @@ André
 
 
 -->
-
+<!--
 <mat-card>
     <div class="styling">
         <mat-icon>format_bold</mat-icon>
@@ -27,7 +27,7 @@ André
         <mat-icon>code</mat-icon>
     </div>
     <div class="input">
-        <mat-form-field class="full-width" appearance="fill" color="accent">
+        <mat-form-field class="fullWidth" appearance="fill" color="accent">
             <mat-label>Nachricht an CHANNEL</mat-label>
             <textarea autosize matInput placeholder="Write something..." class="text-area" rows="3"></textarea>
         </mat-form-field>
@@ -41,4 +41,11 @@ André
             <mat-icon>send</mat-icon>
         </div>
     </div>
+</mat-card>
+
+-->
+
+<mat-card>
+<quill-editor></quill-editor>
+
 </mat-card>
