--- a/src/app/dialog-create-new-channel/dialog-create-new-channel.component.scss
+++ b/src/app/dialog-create-new-channel/dialog-create-new-channel.component.scss
@@ -1,4 +1,4 @@
-.dialog-container {
+.dialogContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,7 +11,7 @@
     justify-content: space-between;
     width: 100%;
 }
-.subhead-wrap{
+.subheadWrap{
     display:flex;
     align-items: baseline;
 }
@@ -32,7 +32,7 @@ mat-form-field {
 
 }
 
-.button-wrap {
+.buttonWrap {
     width: 100%;
     display: flex;
     justify-content: flex-end;
