--- a/src/app/chatbox/chatbox.component.scss
+++ b/src/app/chatbox/chatbox.component.scss
@@ -1,36 +1,24 @@
-mat-card{margin:0;}
-
-
-.styling {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 16px;
-    padding-bottom: 16px;
-
-    span {
-        font-size: 18px;
-    }
+mat-card {
+    margin: 0;
 }
 
-.fullWidth {
+
+quill-editor {
     width: 100%;
-
-    textarea {
-        resize: none;
-    }
 }
 
-.operate {
-
+.sendButton {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
+    width: calc(100% - 2px);
+    border-right: 1px solid #ccc;
+    border-left: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
 
-    div:first-child {
-        display: flex;
-        gap: 16px;
-    }
+.icon {
+    padding: 8px;
 }
