--- a/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
+++ b/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
@@ -3,6 +3,8 @@
 
     Status: nicht responsive
     keine Funktion 
+
+    Bei Erstellung Übergabe an Firestore: Users, Type(channel oder message)
     
     André-->
 
