add components, login and sign up with backend

--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -15,10 +15,10 @@ André
 
 -->
 
-
+<!-- 
 <mat-card>
     <quill-editor formControl placeholder="Nachricht an" [modules]="modules" (onEditorChanged)="changedEditor($event)"></quill-editor>
     <div class="sendButton">
         <mat-icon class="icon" (click)="print()">send</mat-icon>
     </div>
-</mat-card>
+</mat-card> -->
