chatbox is working

--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -17,9 +17,9 @@ André
 
 -->
 
-<!-- 
+
 <mat-card>
-    <quill-editor formControl placeholder="Nachricht an" [modules]="modules" (onEditorChanged)="changedEditor($event)">
+    <quill-editor placeholder="Nachricht an" [modules]="modules" (onEditorChanged)="changedEditor($event)" id="quillEditor">
     </quill-editor>
     <div class="pictureWrap" *ngIf="preview">
         <div class="singlePicture">
@@ -37,4 +37,4 @@ André
         </label>
         <mat-icon class="icon" (click)="saveAndSend()">send</mat-icon>
     </div>
-</mat-card> -->
+</mat-card> 
