--- a/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
+++ b/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
@@ -1,8 +1,8 @@
-<<<<<<< HEAD
+<!--<<<<<<< HEAD
 <h1 mat-dialog-title>
     Add new Channel</h1>
 <div mat-dialog-content>
-    <p>Pleas enter the name of a Channel</p>
+    <p>Please enter the name of a Channel</p>
     <mat-form-field>
         <mat-label>Name</mat-label>
         <input matInput [(ngModel)]="channelName">
@@ -11,7 +11,7 @@
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
     <button mat-button [disabled]="channelName.length == 0" [mat-dialog-close]="channelName" cdkFocusInitial>Ok</button>
-=======
+=======-->
 <!-- 
     Dialog für die Erstellung eines neuen Channels
 
@@ -26,7 +26,7 @@
 <div class="dialogContainer">
     <div class="headline">
         <h1 mat-dialog-title>Channels erstellen</h1>
-        <mat-icon>close</mat-icon>
+        <mat-icon (click)="onNoClick()">close</mat-icon>
     </div>
     <div mat-dialog-content>
         <p>Channels dienen deinem Team zur Kommunikation. Am besten sollten sie themenbezogen sein – #marketing zum
@@ -48,5 +48,5 @@
         <div class="buttonWrap"><button mat-button color="accent">Erstellen</button></div>
         <!--disabled eingeben, wenn kein name gegeben ist-->
     </div>
->>>>>>> 41ea679443038d0fedf34c1df6c471dcbee8eb41
+<!-->>>>>>> 41ea679443038d0fedf34c1df6c471dcbee8eb41-->
 </div>
