current User ID saved @ local storage

--- a/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
+++ b/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
@@ -37,7 +37,7 @@
         <mat-form-field appearance="fill">
             <mat-label>Name</mat-label>
             <input matInput placeholder="z.B. marketing" maxlength="80">
-            <!--# und zeichenzähler hinzufügen-->
+            <!--# und zeichenzähler hinzufügen??-->
         </mat-form-field>
         <h3>Beschreibung (optional)</h3>
         <mat-form-field appearance="fill">
