--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -27,20 +27,9 @@
         color: white;
     }
 
-
-
-    display: flex;
-    flex-direction: column;
-
-    .input {
-        height: 20px;
-        width: 300px;
-        border: 1px solid white;
-        border-radius: 4px;
-        padding: 8px;
-        margin: 8px;
+    input {
+        color: white;
     }
-
 
     .loginBtn {
         margin-bottom: 8px;
@@ -77,8 +66,6 @@
         }
 
     }
-
-
 
     .loginBtns {
         display: flex;
