--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,6 @@
 <div class="login">
     <h2>Welcom to our</h2>
     <h1>slack-clone</h1>
-    <h3>Enter your email address<br>and passwort</h3>
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
         <div class="column">
             <mat-form-field>
@@ -23,7 +22,7 @@
         <div>
             <button class="loginBtn" type="submit" mat-raised-button color="primary">Login</button>
         </div>
-        <div class="forgotPasswort mb24">Forgot passwort</div>
+        <!-- <div class="forgotPasswort mb24">Forgot passwort</div> -->
         <div class="orCont">
             <hr class="hr1">
             <span>OR</span>
