log in as guest implemented

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,7 @@
             <hr class="hr1">
         </div>
         <div class="loginBtns mb24">
-            <span>Login as Guest</span>
+            <span (click)="logInAsGuest()">Login as Guest</span>
         </div>
         <div class="orCont">
             <hr class="hr1">
