--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login">
     <h2>Welcom to our</h2>
-    <h1>slack-clone</h1>
+    <h1>Slack-Clone</h1>
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
         <div class="column">
             <mat-form-field>
