add channel-list-comp and members-comp to left-side-comp

--- a/src/app/channel-list/channel-list.component.html
+++ b/src/app/channel-list/channel-list.component.html
@@ -1,4 +1,6 @@
-<p>channel-list works!</p>
+<div class="channelListCont">
+    <p>channel-list works!</p>
+</div>
 <!--
     all messages and channels as list
 joshua
