--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,8 +1,9 @@
 <p>channel works!</p>
+
 <!--
 
     all threads shown
     joshua
 -->
 
-<app-chatbox></app-chatbox>
+<!-- <app-chatbox></app-chatbox> -->
