--- a/src/app/left-side/left-side.component.html
+++ b/src/app/left-side/left-side.component.html
@@ -1,3 +1,5 @@
 <div class="leftSide">
     <button (click)="openDialog()">Create a new channel</button>
+    <app-channel-list></app-channel-list>
+    <app-members></app-members>
 </div>
