create new channel works

--- a/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
+++ b/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
@@ -1,5 +1,5 @@
-
-<h1 mat-dialog-title>
+<!--
+    <h1 mat-dialog-title>
     Add new Channel</h1>
 <div mat-dialog-content>
     <p>Please enter the name of a Channel</p>
@@ -11,7 +11,7 @@
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">No Thanks</button>
     <button mat-button [disabled]="channelName.length == 0" [mat-dialog-close]="channelName" cdkFocusInitial>Ok</button>
-
+-->
 <!-- 
     Dialog für die Erstellung eines neuen Channels
 
@@ -22,8 +22,7 @@
     
     André-->
 
-
-<!-- <div class="dialogContainer">
+<div class="dialogContainer">
     <div class="headline">
         <h1 mat-dialog-title>Channels erstellen</h1>
         <mat-icon (click)="onNoClick()">close</mat-icon>
@@ -32,21 +31,19 @@
         <p>Channels dienen deinem Team zur Kommunikation. Am besten sollten sie themenbezogen sein – #marketing zum
             Beispiel.</p>
         <div class="subheadWrap">
-            <h3>Name</h3><span class="info">Vergiss nicht, deinem Channel einen Namen zu geben.</span>
+            <h3>Name</h3>
         </div>
         <mat-form-field appearance="fill">
             <mat-label>Name</mat-label>
-            <input matInput placeholder="z.B. marketing" maxlength="80">
-            # und zeichenzähler hinzufügen??
+            <input matInput placeholder="z.B. marketing" maxlength="80" [(ngModel)]="channelName">
         </mat-form-field>
         <h3>Beschreibung (optional)</h3>
         <mat-form-field appearance="fill">
             <mat-label>Beschreibung</mat-label>
-            <input matInput placeholder="z.B. marketing" maxlength="80">
+            <input matInput placeholder="" [(ngModel)]="description">
         </mat-form-field>
         <p class="question">Worum geht es in diesem Channel?</p>
-        <div class="buttonWrap"><button mat-button color="accent">Erstellen</button></div>
-        disabled eingeben, wenn kein name gegeben ist
+        <div class="buttonWrap"><button mat-button color="accent" [disabled]="channelName.length == 0"
+                (click)="createNewChannel()">Erstellen</button></div>
     </div>
->>>>>>> 41ea679443038d0fedf34c1df6c471dcbee8eb41
-</div> -->
+</div>
