channel-list works

--- a/src/app/channel-list/channel-list.component.html
+++ b/src/app/channel-list/channel-list.component.html
@@ -1,7 +1,3 @@
 <div class="channelListCont">
-    <p>channel-list works!</p>
+    <div *ngFor="let channel of allChannels">{{ channel.channelName }}</div>
 </div>
-<!--
-    all messages and channels as list
-jürgen
--->
