--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,8 +1,6 @@
 <div class="toolBar">
-    <div>
-        <h2>Slack-clone</h2>
-    </div>
-    <div>
+    <h2>Slack-clone</h2>
+    <div class="d-flex user">
         <h2>User</h2>
         <button (click)="logout()">logout</button>
     </div>
