add channel-comp and css

--- a/src/app/main-container/main-container.component.html
+++ b/src/app/main-container/main-container.component.html
@@ -1,3 +1,6 @@
 <app-toolbar></app-toolbar>
-<app-left-side></app-left-side>
+<div class="d-flex">
+    <app-left-side></app-left-side>
+    <app-channel></app-channel>
+</div>
 <router-outlet></router-outlet>
