--- a/src/app/left-side/left-side.component.scss
+++ b/src/app/left-side/left-side.component.scss
@@ -1,6 +1,6 @@
 .leftSide {
-    height: calc(100vh - 60px);
+    height: calc(100vh - 89px);
     width: 200px;
-    border: 1px solid white;
+    background-color: rgb(25, 23, 29);
     padding: 12px;
 }
