--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: white;
     background-color: rgb(32, 31, 34);
+    max-height: 40px;
     padding: 16px;
+    border-bottom: 1px solid rgb(139, 139, 139);
 
     h2 {
         color: white;
