--- a/src/app/channel/channel.component.html
+++ b/src/app/channel/channel.component.html
@@ -1,6 +1,6 @@
 <div class="channelCont">
   <p>channel works!</p>
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
 </div>
 
 <!--
