--- a/src/app/channel/channel.component.scss
+++ b/src/app/channel/channel.component.scss
@@ -1,6 +1,6 @@
 .channelCont {
-    max-width: calc(100vh - 200px);
-    min-width: calc(100vh - 200px - 300px);
+    max-width: calc(100vw - 200px);
+    min-width: calc(100vw - 200px);
     height: calc(100vh - 89px);
     background-color: rgb(27, 29, 33);
     padding: 12px;
