--- a/src/app/left-side/left-side.component.scss
+++ b/src/app/left-side/left-side.component.scss
@@ -1,6 +1,7 @@
 .leftSide {
     height: calc(100vh - 89px);
     width: 200px;
+    border-right: 1px solid  rgb(139, 139, 139);
     background-color: rgb(25, 23, 29);
     padding: 12px;
 }
