--- a/src/app/channel-list/channel-list.component.html
+++ b/src/app/channel-list/channel-list.component.html
@@ -6,6 +6,6 @@
         </button>
     </div>
     <div class="channels">
-        <div *ngFor="let channel of allChannels">{{ channel.channelName }}</div>
+        <div class="cursorPointer" *ngFor="let channel of allChannels">{{ channel.channelName }}</div>
     </div>
 </div>
