--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,3 +1,11 @@
 <div class="membersCont">
-    <p>members works!</p>
+    <div class="d-flex sb">
+        <h3>Direktnachrichten</h3>
+        <button (click)="openDialog()" mat-fab color="basic">
+            <mat-icon>add</mat-icon>
+        </button>
+    </div>
+    <div class="channels">
+        
+    </div>
 </div>
