--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     flex-direction: column;
 }
 
+.cursorPointer {
+    cursor: pointer;
+}
+
 .sb {
     justify-content: space-between;
 }
