dialog-add-new-channel recognizes, if name is used already

--- a/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
+++ b/src/app/dialog-create-new-channel/dialog-create-new-channel.component.html
@@ -32,12 +32,12 @@
             Beispiel.</p>
         <div class="subheadWrap">
             <h3>Name</h3>
+            <span *ngIf="nameIsUsed" class="warntext">Name ist bereits vergeben. Bitte wähle einen anderen!</span>
         </div>
         <mat-form-field appearance="fill">
             <mat-label>Name</mat-label>
             <input matInput placeholder="z.B. marketing" maxlength="80" [(ngModel)]="channelName">
         </mat-form-field>
-        <p class="question">Worum geht es in diesem Channel?</p>
         <div class="buttonWrap"><button mat-button color="accent" [disabled]="channelName.length == 0"
                 (click)="createNewChannel()">Erstellen</button></div>
     </div>
