--- a/src/app/channel-list/channel-list.component.scss
+++ b/src/app/channel-list/channel-list.component.scss
@@ -1,7 +1,6 @@
 .channelListCont {
     height: 44vh;
     color: white;
-
     button {
         height: 28px;
         width: 28px;
@@ -9,10 +8,13 @@
         align-items: center;
         justify-content: center;
     }
-
     .channels {
         max-height: 38vh;
         overflow-y: scroll;
     }
-
+    .channelButton {
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
